compiler/testData/diagnostics/tests/extensions/contextReceivers/syntaxError.kt
// DIAGNOSTICS: -CONTEXT_RECEIVERS_DEPRECATED
// FIR_IDENTICAL
// LANGUAGE: +ContextReceivers

context(
<!SYNTAX!><!>fun foo() {
}